# quant-research-platform

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Makefile  README.md  config.py  findings.md  package.json  progress.md  pyproject.toml  start-windows.ps1  start.ps1  stop.ps1  task_plan.md  update_min_qty.py
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: async_utils.py  config.py  deps.py  events.py  exceptions.py
backend/app/routes/mcp/: __init__.py  proxy.py
backend/app/routes/v1/: analysis.py  backtest.py  data.py  experiences.py  factors.py  graph.py  logs.py  mcp_management.py  notes.py  pipeline.py  research.py  router.py  stock.py  strategies.py  tasks.py  ws.py
backend/app/schemas/: __init__.py  analysis.py  backtest.py  common.py  experience.py  factor.py  graph.py  log.py  mcp.py  note.py  stock.py  stocks.py  strategy.py  task.py
backend/domains/core/: __init__.py  exceptions.py  lifecycle.py
backend/domains/data_hub/: __init__.py
backend/domains/data_hub/api/: __init__.py
backend/domains/data_hub/core/: __init__.py  config.py  exceptions.py  models.py
backend/domains/data_hub/services/: __init__.py  data_loader.py  data_slicer.py  factor_calculator.py  factor_data_loader.py
backend/domains/experience_hub/: __init__.py
backend/domains/experience_hub/api/: __init__.py
backend/domains/experience_hub/core/: __init__.py  config.py  models.py  schema.sql  store.py
backend/domains/experience_hub/services/: __init__.py  experience.py
backend/domains/experience_hub/tasks/: __init__.py  curate.py
backend/domains/factor_hub/: __init__.py
backend/domains/factor_hub/api/: __init__.py
backend/domains/factor_hub/cli/: __init__.py  main.py
backend/domains/factor_hub/core/: __init__.py  config.py  exceptions.py  models.py  progress.py  store.py
backend/domains/factor_hub/services/: __init__.py  factor_analysis.py  factor_group_analysis.py  factor_service.py  field_filler.py  multi_factor_analysis.py  prompt_engine.py
backend/domains/factor_hub/tasks/: __init__.py  diff_catalog.py  extract_metadata.py  generate_analysis.py  ingest.py  review.py  update_field.py
backend/domains/graph_hub/core/: __init__.py  models.py  store.py
backend/domains/graph_hub/services/: __init__.py  graph_service.py  relation_extractor.py
backend/domains/graph_hub/tasks/: __init__.py  cleanup.py  migration.py
backend/domains/mcp_core/: __init__.py  config.py  paths.py  settings.py
backend/domains/mcp_core/base/: __init__.py  prompt.py  resource.py  store.py  tool.py
backend/domains/mcp_core/database/: __init__.py  connection.py  query_builder.py  session.py
backend/domains/mcp_core/edge/: __init__.py  models.py  store.py
backend/domains/mcp_core/knowledge_graph/: __init__.py  extractor.py  models.py  query.py  store.py
backend/domains/mcp_core/llm/: __init__.py  client.py  compatible.py  config.py
backend/domains/mcp_core/logging/: __init__.py  config.py  store.py
backend/domains/mcp_core/middleware/: __init__.py  error_handler.py
backend/domains/mcp_core/observability/: __init__.py  llm_logger.py  mcp_logger.py  models.py  session_logger.py  storage.py  tool_logger.py
backend/domains/mcp_core/queue/: __init__.py  task_queue.py
backend/domains/mcp_core/server/: __init__.py  protocol.py  server.py  sse.py  streamable_http.py
backend/domains/mcp_core/sync/: __init__.py  base.py  edge_sync.py  experience_sync.py  factor_sync.py  lock.py  manager.py  note_sync.py  strategy_sync.py  trigger.py
backend/domains/note_hub/: __init__.py
backend/domains/note_hub/api/: __init__.py
backend/domains/note_hub/core/: __init__.py  models.py  store.py
backend/domains/note_hub/services/: __init__.py  note_service.py
backend/domains/research_hub/: __init__.py
backend/domains/research_hub/agents/: __init__.py  base.py  research_chat.py
backend/domains/research_hub/api/: __init__.py
backend/domains/research_hub/core/: __init__.py  config.py  models.py  store.py
backend/domains/stock_hub/: CHANGELOG_STOCK_HUB.md  README.md  __init__.py  config.py
backend/domains/strategy_hub/: __init__.py  advanced_crypto_momentum_config.py  crypto_momentum_config.py
config/: __init__.py  (+5 more)
(+449 files in other folders)
